# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

  18 Dec 2003; Masatomo Nakano <nakano@gentoo.org> repoman: Added virtual
	dependency check on each arch.

  17 Dec 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Fixed a
	permission issue involving $T and userpriv. Lockfile touchup.
	
	17  Dec 2003; Nicholas Jones <carpaski@gentoo.org> portage_db_*: Added
	templates and db for cache interfaces. Presently have a anydbm and a
	flat file interface working. See the test for operations.

  15 Dec 2003; Nicholas Jones <carpaski@gentoo.org> emerge: Added a call
	to portageq that causes python to create optimized modules prior to it
	ending up inside the sandbox. Added more output and logging to sync.
	
  15 Dec 2003; Nicholas Jones <carpaski@gentoo.org> prepstrip: 'tree' is not
	the same as 'true'.
	
  15 Dec 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: invalid
	settings in package.keywords caused a traceback -- fixed with error message.
	
*portage-2.0.50_pre1 (12 Dec 2003): API change + enhancements

  10 Dec 2003; Nicholas Jones <carpaski@gentoo.org> chkcontents: Uses portage
  functions to do md5sum calcs.

  10 Dec 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Removed try()
  as it isn't used, and was deprecated for a long while. Genone's fetching
  size display added for --verbose. License display added. Added a little
  debug for IUSE so we can figure out the binary package --verbose IUSE
  issues that are randomly reported. XXXXXXXXXXXXXXXXXXX's 'buildsyspkg'
  patch for building only system packages into tbz2s. Unmerge fix for new
  settings instances. RSYNC_RATELIMIT added.
  
  10 Dec 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: ADA path
  variables added to specials for env_update. Error messaeg correction for
  make.defaults syntax errors. Unmerge now uses the environment file, if it