@@ -1,5 +1,5 @@
 
-import anydbm,marshal,types
+import anydbm,cPickle,types
 
 import portage_db_template
 
@@ -30,7 +30,7 @@ class database(portage_db_template.database):
 	def get_values(self,key):
 		self.check_key(key)
 		if self.key_exists(key):
-			myval = marshal.loads(self.db[key])
+			myval = cPickle.loads(self.db[key])
 			self.check_val(myval)
 			return myval
 		return None
@@ -38,7 +38,7 @@ class database(portage_db_template.database):
 	def set_values(self,key,val):
 		self.check_key(key)
 		self.check_val(val)
-		self.db[key] = marshal.dumps(val)
+		self.db[key] = cPickle.dumps(val)
 	
 	def del_key(self,key):
 		if self.key_exists(key):
